@@ -1,0 +1,175 @@
+/*
+CSS Name: K2 Theme
+Description: NextGEN Style for K2 Theme
+Author: Alex Rabe
+Version: 1.00
+   
+This is a template stylesheet that can be used with NextGEN Gallery. I tested the
+styles with a default theme Kubrick. Modify it when your theme struggle with it,
+it's only a template design
+
+*/
+
+/* ----------- Album Styles Extend -------------*/
+
+.ngg-albumoverview {
+	margin: 10px 0px 0px 0px !important;
+	width: 100%;
+	clear:both; 
+	display:block !important;
+}
+
+.ngg-album {
+	margin: 0px 0px 5px !important;
+	height: 130px;
+	padding: 5px;
+	border: 1px solid #cccccc;
+}
+
+.ngg-albumtitle {
+	text-align: left;
+ 	font-weight: bold;
+	padding:0px;
+	font-size: 1.4em;
+	margin: 0px 0px 10px 0px !important;
+}
+
+.ngg-albumcontent {
+	margin: 0px !important;
+}
+
+.ngg-thumbnail {
+	margin:0px 12px 0px 0px !important;
+	float: left;
+}
+
+.ngg-thumbnail img {
+	background-color:#FFFFFF;
+	border:1px solid #A9A9A9;
+	margin:4px 0px 4px 5px !important;
+	padding:4px;
+	position:relative;
+}
+
+.ngg-thumbnail img:hover {
+	background-color: #A9A9A9;
+}
+
+.ngg-description {
+	text-align: left;
+}
+
+/* ----------- Album Styles Compact -------------*/
+
+.ngg-album-compact {
+	float:left;
+	height:180px;
+	padding-right:6px !important;
+	margin:0px !important; 
+	text-align:left;
+	width:120px;	
+}
+
+.ngg-album-compactbox {
+	background:transparent url(albumset.gif) no-repeat scroll 0%;
+	height:86px;
+	margin:0pt 0pt 6px !important;
+	padding:12px 0pt 0pt 7px !important;
+	width:120px;
+}
+
+.ngg-album-link {
+	margin:0px !important;
+}
+
+.ngg-album-compactbox .Thumb {
+	border:1px solid #000000;
+	margin:0px !important;
+	padding:0px !important;
+}
+
+.ngg-album-compact h4 {
+	font-size:15px;
+	font-weight:bold;
+	margin-bottom:0px !important;
+	margin-top:0px !important;
+	width:110px;
+	padding:0px !important;
+}
+
+.ngg-album-compact p {
+	font-size:11px;
+	margin-top:2px;
+}
+
+/* ----------- Gallery style -------------*/
+
+.ngg-galleryoverview {
+	margin-top: 10px;
+	width: 100%;
+	clear:both; 
+	display:block !important;
+}
+
+.ngg-gallery-thumbnail-box {
+	margin:0px !important;
+	float: left;
+}
+
+.ngg-gallery-thumbnail {
+	float: left; 
+	background: url(shadowAlpha.png) no-repeat bottom right !important;
+	background: url(shadow.gif) no-repeat bottom right;
+	margin: 10px 0 0 10px !important;
+}
+
+.ngg-gallery-thumbnail img {
+	margin: -6px 6px 6px -6px !important;
+	background-color:#FFFFFF;
+	border:1px solid #A9A9A9;
+	display:block; 
+	padding:4px;
+	position:relative;
+}
+
+.ngg-gallery-thumbnail img:hover {
+	background-color: #A9A9A9;
+} 
+
+/* ----------- Gallery navigation -------------*/
+
+.ngg-navigation {
+	font-size:0.9em !important;
+	clear:both !important;
+	display:block !important;
+	padding-top:15px;
+	text-align:center;
+}
+
+.ngg-navigation span {
+	font-weight:bold;
+	margin:0pt 6px;
+}
+
+.ngg-navigation a.page-numbers, a.next, a.prev {
+	border:1px solid #DDDDDD;
+	margin-right:3px;
+	padding:3px 7px;
+}
+
+.ngg-navigation a.page-numbers:hover, a.next:hover, a.prev:hover {
+	background-color: #0066CC;
+	color: #FFFFFF;
+	text-decoration: none;
+}
+
+/* ----------- Slideshow -------------*/
+.slideshow {
+	margin-left: auto; 
+	margin-right: auto;
+	text-align:center;	
+}
+
+.slideshowlink {
+	
+}
